position: fixed para la barra informativa superior en version mobile

--- a/css/globalStyle.css
+++ b/css/globalStyle.css
@@ -5,6 +5,7 @@
   --tertiary-color: blue;
   --quarter-color: black;
 }
+
 html {
   /* font-size: 62.5%; facilita el uso de medidas rem, usar rem en lugar de px mejora la accesibilidad, ya que permite a los navegadores usar reglas para escalar correctamente el contenido si es necesario */
   /* Nuevos ejemplos de medidas rem equivalentes a px: 1rem = 10px; 1.8rem = 18px; 18rem = 180px; .2rem = 2px;*/
@@ -14,6 +15,7 @@ html {
 body {
   min-width: 32rem;
   position: relative;
+  overflow-x: hidden;
   font-family: "Rubik", sans-serif;
 }
 .tgrande {
